# ono

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
docs/: README.md  components.md  eject.md  getting-started.md  theming.md
examples/ratatui-demo/: Cargo.toml  README.md
examples/ratatui-demo/src/: main.rs
examples/ratatui-demo/src/ono/: mod.rs  theme.rs
examples/ratatui-demo/src/ono/components/: boot.rs  dashboard.rs  mod.rs  splash.rs
examples/ratatui-demo/src/ono/elements/: mod.rs  percentage.rs  progress.rs
examples/ratatui-library/: Cargo.toml  README.md
examples/ratatui-library/src/: main.rs
experiments/: Cargo.toml  README.md
experiments/src/: lib.rs
ono/: Cargo.toml  LICENSE  README.md
ono/specs/components/: boot.toml  dashboard.toml  map.toml  splash.toml
ono/specs/elements/: box.toml  percentage.toml  sparkline.toml  spinner.toml  typewriter.toml
ono/src/: lib.rs  main.rs
ono/src/cli/: add.rs  mod.rs  preview.rs
ono/src/components/: map.rs  mod.rs  statusbar.rs
ono/src/elements/: boxed.rs  mod.rs  percentage.rs  progress.rs  sparkline.rs  spinner.rs  typewriter.rs
ono/src/spec/: catalog.rs  expr.rs  mod.rs  resolve.rs  tests.rs  types.rs  validate.rs
ono/src/theme/: mod.rs
specs/components/: statusbar.toml
specs/elements/: progress.toml
