[workspace]
resolver = "2"
members = [
    "ono",
    "experiments",
    "examples/ratatui-demo",
    "examples/ratatui-library",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["NullOrder", "Kumar Anirudha"]
license = "MIT"
repository = "https://github.com/nullorder/ono"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
figlet-rs = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"
thiserror = "2"
