[package]
name = "experiments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
theme-retro = []
theme-minimal = []
theme-forest = []
all-themes = ["theme-retro", "theme-minimal", "theme-forest"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
figlet-rs.workspace = true
