[package]
name = "ono"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Beautiful terminal UI components for Ratatui — themeable widgets with an eject-to-source CLI."
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "components", "widgets"]
categories = ["command-line-interface", "command-line-utilities"]
homepage = "https://github.com/nullorder/ono"
documentation = "https://docs.rs/ono"

[features]
default = []
theme-retro = []
theme-minimal = []
theme-cyber = []
all-themes = ["theme-retro", "theme-minimal", "theme-cyber"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
figlet-rs.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
include_dir.workspace = true
thiserror.workspace = true

[lib]
name = "ono"
path = "src/lib.rs"

[[bin]]
name = "ono"
path = "src/main.rs"
